kubernetes/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app-green
  labels:
    app: gitops-app
    version: green                    
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-app
      version: green
  template:
    metadata:
      labels:
        app: gitops-app
        version: green
    spec:
      containers:
      - name: gitops-app
        image: khrisblurp/gitops-project-app:1
        ports:
        - containerPort: 5050
        livenessProbe:
          httpGet:
            path: /health
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
