kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-app
  labels: blue
    app: gitops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gitops-app
  template:
    metadata:
      labels: blue
        app: gitops-app
    spec:
      containers:
      - name: gitops-app
        image: khrisblurp/gitops-project-app:1
        ports:
        - containerPort: 5050
        livenessProbe:
          httpGet:
            path: /health
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
