kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app-service
spec:
  selector:
    app: gitops-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5050
  type: NodePort
